--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -45,6 +45,22 @@
         box-shadow: 1px 1px 5px black;
       }
      </style>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <style>
+     .card {
+         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+         transition: 0.3s;
+         width: 40%;
+     }
+
+     .card:hover {
+         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+     }
+
+     .container {
+         padding: 2px 16px;
+     }
+     </style>
   </head>
   {% block css %}{% endblock css %}
 </head>
