ref #47 gráfico ok

--- a/escolar/financeiro/templates/financeiro/grafico_contratos_pagamentos.html
+++ b/escolar/financeiro/templates/financeiro/grafico_contratos_pagamentos.html
@@ -42,8 +42,8 @@
         );
 
       var options = {
-        title: 'Performance de pagamentos',
-        hAxis: {title: 'Anos',  titleTextStyle: {color: '#333'}},
+        title: 'Pontualidade dos pagamentos',
+        hAxis: {title: 'Datas',  titleTextStyle: {color: '#333'}},
         vAxis: {minValue: 0}
       };
 
