ref #100 lista de parâmetros e redirecionamentos salvando. Ano correntee ano que vem. TODO a geração de contrato deve escolher pelo ANO o parâmetro a usar

--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -35,7 +35,7 @@
                   <ul class="dropdown-menu">
                     <li class="{{ tab_categorias }}"><a href="{% url 'categorias_list' escola.id %}" title="{{ section.name }}">Categorias de Pagamentos</a></li>
                     <li class="{{ tab_grupos }}"><a href="{% url 'grupos_list' escola.id %}" id='id_grupos'>Grupos</a></li>
-                    <li class="{{ tab_parametros }}"><a href="{% url 'parametro_cadastro' escola.id %}" title="{{ section.name }}">Parâmetros dos Contratos</a></li>
+                    <li class="{{ tab_parametros }}"><a href="{% url 'parametros_contrato_list' escola.id %}" title="{{ section.name }}">Parâmetros dos Contratos</a></li>
                     </li>
                     <!-- <li><a href="" title="{{ section.name }}">Cartões</a></li> -->
                   </ul>
