--- a/escolar/financeiro/templates/financeiro/parametros_contrato_list.html
+++ b/escolar/financeiro/templates/financeiro/parametros_contrato_list.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="container">
   <div class="row-fluid span10">
-    {% if can_edit %}
+    {% if can_create %}
       <a class="btn btn-success" href="{% url 'parametros_contrato_form' escola.pk %}" class="btn btn-mini btn-success">Parâmetros para outro ano</a>
     {% endif %}
       <table class="table table-striped">
