ref #101 listagem de bandeiras, formulário de bandeira e parâmetros; bandeira, escola unique together; MIGRATION

--- a/escolar/financeiro/templates/financeiro/bandeira_form.html
+++ b/escolar/financeiro/templates/financeiro/bandeira_form.html
@@ -51,6 +51,15 @@
               <p>{% bootstrap_field form.nome %}</p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-xs-9 col-sm-6 col-md-3">
+              <p>{% bootstrap_field form_param.ativa %}</p>
+              <p>{% bootstrap_field form_param.taxa_debito %}</p>
+              <p>{% bootstrap_field form_param.dias_debito %}</p>
+              <p>{% bootstrap_field form_param.taxa_credito %}</p>
+              <p>{% bootstrap_field form_param.dias_credito %}</p>
+            </div>
+        </div>
       </div>
       <!-- glyphicon glyphicon-print -->
       <div class="form-actions">
