ref #101 Refaz a MIGRATION, falatava a taxa e a bandeira no pagamento; valida no clean do form de pgto se tem a bandeira quando usa cartão como forma de pagamento

--- a/escolar/financeiro/templates/financeiro/pagamento_form.html
+++ b/escolar/financeiro/templates/financeiro/pagamento_form.html
@@ -57,6 +57,7 @@
              {% endif %} 
              {% bootstrap_field form.categoria %}
              {% bootstrap_field form.forma_pgto %}
+             {% bootstrap_field form.bandeira %}
           </div>
           <div class="col-xs-9 col-sm-6 col-md-3">
              {% bootstrap_field form.data %}
