--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -136,7 +136,7 @@
               {% endif %}
             </small>
           </td>
-          <td>{{ pagamento.get_forma_pgto_display }}</td>
+          <td>{{ pagamento.get_forma_pgto_display }}{% if is_diretor and pagamento.taxa_cartao %}<br><small>taxa: {{ pagamento.taxa_cartao }} %</small>{% endif %}</td>
          <!--<td>
               {% if pagamento.efet %}
                   Pago: <span class="glyphicon glyphicon-ok-circle" style="color:green"></span>
